# wcp-l2d

./: .gitignore  README.md  pyproject.toml
notebooks/: continuous_deferral.ipynb  continuous_deferral_executed.ipynb  cooccurrence_analysis.ipynb  eda_distribution_shift.ipynb  label_shift_correction.ipynb  linear_model_feature_validation.ipynb  mondrian_cp_experiment.ipynb  wcp_experiment.ipynb
notebooks/gnn/: gnn_dre_wcp.ipynb  gnn_experiment.ipynb  gnn_followup.ipynb  gnn_lsc_wcp.ipynb  scrc_capability_alpha.ipynb  scrc_hard_fnr.ipynb  scrc_t_nih.ipynb  scrc_t_nih_executed.ipynb
notebooks/multilabel/: fixed_pp_scrc_experiment.ipynb  improved_coverage_multiclass.ipynb  scrc_experiment.ipynb  sep_thres_experiment.ipynb  wcp_experiment_multiclass.ipynb  wcp_experiment_multilabel.ipynb
notebooks/pure_cov_shift/: pure_cov_shift_wcp.ipynb  synthetic_covariate_shift_scrc.ipynb  synthetic_covariate_shift_scrc_executed.ipynb  synthetic_covariate_shift_scrc_gnn.ipynb  umap_pure_cov_shift.ipynb  (+2 more)
report/: binary-continous-deferral.md  fixed-pp-scrc.md  gnn-followup.md  gnn-scrc.md  gnn_dre_wcp_report.md  gnn_lsc_wcp_report.md  multiclass-wcp.md  multilabel-wcp.md  pure_cov_shift_wcp_report.md  scrc-multilabel.md  scrc_capability_alpha_report.md  scrc_hard_fnr_report.md  scrc_t_gnn_report.md  scrc_t_nih_75_25_report.md  scrc_t_nih_report.md  sep-thres.md  synthetic_covariate_shift_scrc_report.md
scripts/: add_combined_exp.py  add_mlp_exp.py  create_gnn_followup.py  download_data.sh  extract_features.py  extract_perturbed_features.py  run_synthetic_cov_shift.py
(+15 files in other folders)
